--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -15,8 +15,8 @@ $lightGray: #eee;
 $white: #fff;
 
 // Font stacks
-$helvetica: Helvetica, Arial, sans-serif;
-$helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
+$helvetica: 'Source Sans Pro', Helvetica, Arial, sans-serif;
+$helveticaNeue: 'Source Sans Pro', Helvetica, Arial, sans-serif;
 $georgia: Georgia, serif;
 
 // Mobile breakpoints
