--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,8 @@ html {
 
 body {
 	background: $white;
-  font: 18px/1.4 $helvetica;
+  font-size: 18px;
+font-family:  $helvetica;
   color: $darkGray;
 }
 
@@ -67,6 +68,7 @@ h4 {
 p {
   margin: 15px 0; 
 text-align: justify;
+	font-family:  $helvetica;
 }
 
 a {
