--- a/style.scss
+++ b/style.scss
@@ -19,8 +19,7 @@ html {
 
 body {
 	background: $white;
-  font-size: 18px;
-font-family:  $helvetica;
+  font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
 
