--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
           </div>
 
           <nav>
-<!--             <a href="{{ site.baseurl }}/">Blog</a> -->
+            <a href="{{ site.baseurl }}/blog">Blog</a>
             <!-- <a href="{{ site.baseurl }}/about">About</a> -->
 <!--             <a href="./CV_JaswanthYella.pdf">Download CV</a> -->
           </nav>
